--- a/streams/templates/streams/home.html
+++ b/streams/templates/streams/home.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 <div class="container-fluid">
-    <a href="{% url 'create_game' %}">create game</a>
-    <a href="{% url 'join_game' %}">join game</a>
+    <a href="{% url 'streams:create_game' %}">create game</a>
+    <a href="{% url 'streams:join_game' %}">join game</a>
 </div>
-
-
 {% endblock content %}
