--- a/streams/templates/streams/base.html
+++ b/streams/templates/streams/base.html
@@ -14,14 +14,16 @@
 
     <body>
         <main>
-            {% block content %} {% endblock content %}
+            <div class="container-fluid">
+                {% block content %} {% endblock content %}
+            </div>
         </main>
-
+<!--
         <footer class="footer fixed-bottom py-3 bg-dark">
             <div class="text-left col-sm-12 mx-2">
                 <a class="text-muted px-2" href="https://github.com/Hogwarts250/mtg_stream">Github</a>
                 <a class="text-muted px-2" href="https://felixzhangblog.herokuapp.com">Blog</a>
             </div>
-        </footer>
+        </footer>-->
     </body>
 </html>
