--- a/streams/templates/streams/join_game.html
+++ b/streams/templates/streams/join_game.html
@@ -1,6 +1,9 @@
-{% extends "streams/base.html" %} {% load bootstrap4 %}
+{% extends "streams/base.html" %} {% load bootstrap4 %} {% load static %}
 
 {% block content %}
+<video id="local_video" width="480" height="360" autoplay muted></video>
+<script src="{% static 'streams/video-feed.js' %}"></script>
+
 <form action="{% url 'streams:join_game' %}" method="get" class="form">
     <label for="id_game_id">Game ID: </label>
     <input type="text" name="game_id" id="id_game_id" required>
