--- a/streams/templates/streams/create_game.html
+++ b/streams/templates/streams/create_game.html
@@ -1,15 +1,25 @@
 {% extends "streams/base.html" %} {% load bootstrap4 %} {% load static %}
 
 {% block content %}
+
 <video id="local_video" width="480" height="360" autoplay muted></video>
 
-<label for="video_source">Video Source: </label><select id="video_source"></select>
-<label for="audio_source">Audio Source: </label><select id="audio_source"></select>
-
 <form action="{% url 'streams:create_game' %}" method="post" class="form">
-    {% csrf_token %}
-    <label for="id_num_players">Number of Players: </label>
-    <input type="number" name="num_players" id="id_num_players" required>
-    <input type="submit" value="create game"/>
+  {% csrf_token %}
+
+  <label for="id_num_players">Number of Players: </label>
+  <input type="number" name="num_players" id="id_num_players" required/>
+
+  <label for="id_video_select">Video Source: </label>
+  <select id="id_video_select"></select>
+  <input type="text" name="video_source" id="id_video_source" hidden/>
+  
+  <label for="id_audio_select">Audio Source: </label>
+  <select id="id_audio_select"></select>
+  <input type="text" name="audio_source" id="id_audio_source" hidden/>
+
+  <input type="submit" class="btn btn-outline-success" id="id_submit" value="Create Game"/>
 </form>
+
+<script type="text/javascript" src="{% static 'streams/setup.js' %}"></script>
 {% endblock content %}
