--- a/streams/templates/streams/join_game.html
+++ b/streams/templates/streams/join_game.html
@@ -1,11 +1,23 @@
 {% extends "streams/base.html" %} {% load bootstrap4 %} {% load static %}
 
 {% block content %}
+
 <video id="local_video" width="480" height="360" autoplay muted></video>
 
 <form action="{% url 'streams:join_game' %}" method="get" class="form">
-    <label for="id_game_id">Game ID: </label>
-    <input type="text" name="game_id" id="id_game_id" required>
-    <input type="submit" value="join game"/>
+  <label for="id_game_id">Game ID: </label>
+  <input type="text" name="game_id" id="id_game_id" {% if game_id is not None %} value={{ game_id }} {% endif %} required>
+
+  <label for="id_video_select">Video Source: </label>
+  <select id="id_video_select"></select>
+  <input type="text" name="video_source" id="id_video_source" hidden/>
+  
+  <label for="id_audio_select">Audio Source: </label>
+  <select id="id_audio_select"></select>
+  <input type="text" name="audio_source" id="id_audio_source" hidden/>
+
+  <input type="submit" id="id_submit" value="join game"/>
 </form>
+
+<script type="text/javascript" src="{% static 'streams/setup.js' %}"></script>
 {% endblock content %}
