--- a/streams/templates/streams/home.html
+++ b/streams/templates/streams/home.html
@@ -1,8 +1,21 @@
-{% extends "streams/base.html" %} {% load bootstrap4 %}
+{% extends "streams/base.html" %} {% load bootstrap4 %} {% load static %}
 
 {% block content %}
-<div class="container-fluid">
-    <a href="{% url 'streams:create_game' %}">create game</a>
-    <a href="{% url 'streams:join_game' %}">join game</a>
+<div class="fullscreen-bg">
+  <div class="video-bg">
+    <video autoplay loop muted>
+      <source src="{% static 'video/background.mp4' %}">
+    </video>
+  </div>
+</div>
+<div class="mask"></div>
+<div class="container-fluid container-overlay h-100">
+  <div class="d-flex h-100 align-items-center">
+    <div class="text-center w-100 my-auto p-2">
+      <h1 class="display-1 font-weight-bold text-white pb-2">Play Magic: the Gathering</h1>
+      <a class="btn btn-outline-light btn-lg m-2" href="{% url 'streams:create_game' %}">create game</a>
+      <a class="btn btn-outline-light btn-lg m-2" href="{% url 'streams:join_game' %}">join game</a>
+    </div>
+  </div>
 </div>
 {% endblock content %}
