--- a/streams/templates/streams/game.html
+++ b/streams/templates/streams/game.html
@@ -14,5 +14,5 @@
   </div>
 </div>
 
-<script type="text/javascript" src="{% static 'js/index.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/game.js' %}"></script>
 {% endblock content %}
