--- a/streams/static/css/main.css
+++ b/streams/static/css/main.css
@@ -3,8 +3,7 @@ body {
   margin: 0px;
   padding: 0px;
 }
-
-main {
+body main {
   height: 100vh;
 }
 
@@ -33,8 +32,7 @@ video {
   left: 0;
   overflow: hidden;
 }
-
-.video-bg {
+.fullscreen-bg #video-bg {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -42,7 +40,6 @@ video {
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: 0;
   -o-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
@@ -50,8 +47,7 @@ video {
   transform: translateX(-50%) translateY(-50%);
   z-index: 0;
 }
-
-.mask {
+.fullscreen-bg .mask {
   position: absolute;
   top: 0;
   left: 0;
@@ -65,6 +61,12 @@ video {
 .container-overlay {
   position: relative;
   z-index: 2;
+}
+
+.container-drag {
+  cursor: move;
+  float: left;
+  z-index: 4;
 }
 
 @media (max-width: 992px) {
