--- a/streams/templates/streams/base.html
+++ b/streams/templates/streams/base.html
@@ -8,6 +8,8 @@
 
     {% load bootstrap4 %} {% load static %}
     {% bootstrap_javascript jquery='full'%}
+
+    {% block head %} {% endblock head %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
   </head>
 
