--- a/streams/templates/streams/game.html
+++ b/streams/templates/streams/game.html
@@ -1,18 +1,34 @@
 {% extends "streams/base.html" %} {% load bootstrap4 %} {% load static %}
 
+{% block head %}
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+{% endblock head %}
+
 {% block content %}
 {{ game_id|json_script:"game_id" }}
 {{ video_source|json_script:"video_source" }}
 {{ audio_source|json_script:"audio_source" }}
 
-<div class="container-overlay row justify-content-center bg-dark h-100">
-  <div class="col-lg-6 text-center my-auto p-1">
-    <video class="stream" id="local_video" autoplay muted></video>
-  </div>
-  <div class="col-lg-6 text-center my-auto p-1">
-    <video class="stream" id="remote_video" autoplay></video>
+<div class="container-overlay h-100">
+  <div class="row justify-content-center bg-dark h-100">
+    <div class="col-2">
+      <div class="btn btn-light" id="create_drag_btn">create element</div>
+    </div>
+    <div class="col-10">
+      <div class="row">
+        <div class="col-lg-6 text-center my-auto p-1">
+          <video class="stream" id="local_video" autoplay muted></video>
+        </div>
+        <div class="col-lg-6 text-center my-auto p-1">
+          <video class="stream" id="remote_video" autoplay></video>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui-widget-content container-drag"></div>
   </div>
 </div>
 
 <script type="text/javascript" src="{% static 'js/game.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/drag.js' %}"></script>
 {% endblock content %}
